--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 10px;
-  width: 10px;
-  pointer-events: none;
-}
 
 .App-header {
   display:grid;
@@ -18,4 +13,5 @@
 
 .App-link {
   color: #61dafb;
+  text-decoration: none;
 }
