--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,34 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Mountains+of+Christmas&display=swap');
+
+.headerTop {
+  background-color: #a19422;
   text-align: center;
-  background-color: #83aef2;
-  height: 100%;
 }
-.homePage {
-  height: 100px;
-  background-color: #42d7f5;
+.headerBot {
+  background-color: #cebf35;
+  text-align: center;
+  font-family: 'Mountains of Christmas', cursive;
+  color: #2c2911;
 }
+.bodyContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-column-gap: 16px;
+  background-color: rgb(248, 242, 190);
+  padding: 8px;
 
-.App-header {
-  display:grid;
-  background-color: #3b5a97;
-  padding-top:  2em;
-  padding-bottom: 2em;
-  grid-template-columns: 3fr 1fr 1fr;
 }
-
-.App-link {
-  color: #61dafb;
-  text-decoration: none;
+.tableName {
+  font-weight: 600;
+  text-align: center;
 }
-.screenText {
-  color: white;
-  text-decoration: none;
+.ideasTable {
+  border-radius: 8px;
+  padding: 8px;
+  background-color: #bdb9ae 
 }
-.representText {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.11em;
-}
-.App-body {
-  background-color: #83aef2;
-  height: 100%;
-}
-.registrationForm {
-  font-size: 1.25em;
-}
-input::placeholder {
-  font-size: 1.25em;
+.tableContent {
+  border-radius: 8px;
+  padding: 3px;
+  background-color: #969695;
 }
