--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,8 @@
   display: grid;
   grid-template-columns: 5fr 1fr;
 }
+.logRegButton {
+  border: 1px solid black;
+  margin-left: 8px;
+  padding: 0 14px;
+}
